Bug 31487 - Crash in intel_drv.so after failing to allocate memory.
Summary: Crash in intel_drv.so after failing to allocate memory.
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: 7.5 (2009.10)
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: Carl Worth
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
: 31490 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-11-09 00:10 UTC by Thomas Fjellstrom
Modified: 2010-11-09 01:33 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg log showing crash backtrace (44.05 KB, text/plain)
2010-11-09 00:10 UTC, Thomas Fjellstrom
no flags Details

Description Thomas Fjellstrom 2010-11-09 00:10:23 UTC
Created attachment 40137 [details]
Xorg log showing crash backtrace

X crashes in the intel driver after failing to allocate memory. I've attached the relevant Xorg log showing the backtrace.

I'm using Linux 2.6.36 (vanila) on Debian Sid, with intel-drv, drm and mesa from git.
Comment 1 Chris Wilson 2010-11-09 01:05:46 UTC
Beside's the obvious issue of finding whatever is causing the oom to occur in the first place, a few symbols are in order to track down the ddx code that failed.

addr2line -e /usr/lib/xorg/modules/drivers/intel_drv.so 0x2b7a4
Comment 2 Chris Wilson 2010-11-09 01:25:47 UTC
*** Bug 31490 has been marked as a duplicate of this bug. ***
Comment 3 Chris Wilson 2010-11-09 01:33:18 UTC
commit 81d355a8dcdfe3d0924bb843bcc0e6546f695391
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Nov 9 09:28:54 2010 +0000

    uxa: Fix crash after allocation failure
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=31487
    Reported-by: Thomas Fjellstrom <tfjellstrom@shaw.ca>
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

The underlying consumer of kernel memory is still at large though.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.